--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Cria pasta de build
         run: |
           mkdir deploy
-          cp -r HomePage/* deploy/
-          cp -r Global deploy/
-          # Adicione outras pastas necessárias aqui
+          cp -r ./HomePage/* ./deploy/
+          cp -r ./Global ./deploy/
+          # Se tiver outras pastas ou arquivos (como imagens, libs etc.), copia aqui também
 
       - name: Configura GitHub Pages
         uses: actions/configure-pages@v3
