--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Cria pasta de build
         run: |
           mkdir ${{ github.workspace }}/deploy
-          cp -r ${{ github.workspace }}/STOCKMASTER/HomePage/* ${{ github.workspace }}/deploy/
-          cp -r ${{ github.workspace }}/STOCKMASTER/Global ${{ github.workspace }}/deploy/
+          cp -r ${{ github.workspace }}/HomePage/* ${{ github.workspace }}/deploy/
+          cp -r ${{ github.workspace }}/Global ${{ github.workspace }}/deploy/
 
       - name: Configura GitHub Pages
         uses: actions/configure-pages@v3
